# zumblezay

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bacon.toml  package-lock.json  package.json  playwright.config.ts  run.local.sh.example  run.sh  run_enqueue_test.sh  run_worker.sh  tsconfig.json
.githooks/: pre-commit
.github/workflows/: ci.yml  docker.yml  docs-pages.yml
.github/worklows/: ci.yml
docs/: AI_AGENT_GUIDE.md  book.toml
docs/src/: SUMMARY.md  api-guide.md  appendix-ai.md  concepts.md  data-storage.md  development.md  getting-started.md  introduction.md  operations.md  testing.md  troubleshooting.md  vision-processing.md
playwright-tests/: events.spec.ts  investigate.spec.ts  summary.spec.ts  transcript.spec.ts
scripts/: vision_worker.py
src/: app.rs  bedrock.rs  bedrock_spend.rs  cli.rs  hybrid_search.rs  investigation.rs  lib.rs  process_events.rs  prompt_context.rs  prompts.rs  schema_registry.rs  server_main.rs  storyboard.rs  summary.rs  summary_test.rs  test_utils.rs  time_util.rs  transcription.rs  transcripts.rs  vision.rs
src/eval/: app.rs  eval_main.rs  mod.rs  models.rs
src/event_understanding/: mod.rs
src/openai/: fake.rs  mod.rs  real.rs
src/templates/: annotations.html  base.html  embeddings.html  events.html  investigate.html  spend.html  status.html  summary.html  transcript.html  transcripts.html
tests/: api_tests.rs  bedrock_integration_tests.rs  hybrid_search_api_tests.rs
