[package]
name = "zumblezay"
version = "0.1.0"
edition = "2021"

[lib]
name = "zumblezay"
path = "src/lib.rs"

[[bin]]
name = "zumblezay_server"
path = "src/server_main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "macros"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
anyhow = "1.0"
tempfile = "3.13.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
url = "2.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
serde_with_macros = "3.12.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5.0"
regex = "1.11.0"
rusqlite = { version = "0.33.0", features = ["serde_json", "bundled"] }
axum = { version = "0.8", features = ["macros"] }
r2d2 = "0.8"
r2d2_sqlite = "0.26"
tokio-util = { version = "0.7", features = ["io"] }
fs2 = "0.4"
lru = "0.13.0"
clap = { version = "4.4", features = ["derive", "env"] }
chrono-tz = "0.10"
csv = "1.3"
markdown = "0.3.0"
tower-http = { version = "0.6.2", features = ["trace", "compression-full"] }
axum-response-cache = "0.2.0"
tracing-tree = "0.4.0"
async-openai = "0.27.2"
built = { version = "0.7", features = ["chrono", "semver"] }
tera = "1.20.0"
iana-time-zone = "0.1.61"
async-trait = "0.1.88"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1"
pretty_assertions = "1.4.1"

[build-dependencies]
built = { version = "0.7", features = ["cargo-lock", "dependency-tree", "git2", "chrono", "semver"] }

