[package]
name = "zumblezay"
version = "0.1.0"
edition = "2021"

[lib]
name = "zumblezay"
path = "src/lib.rs"

[[bin]]
name = "zumblezay_server"
path = "src/server_main.rs"

[[bin]]
name = "zumblezay_eval"
path = "src/eval/eval_main.rs"

[dependencies]
anyhow = "1.0"
async-openai = "0.27.2"
async-trait = "0.1.88"
axum = { version = "0.8", features = ["macros"] }
axum-response-cache = "0.2.0"
base64 = "0.22"
built = { version = "0.7", features = ["chrono", "semver"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.4", features = ["derive", "env"] }
csv = "1.3"
fs2 = "0.4"
hmac = "0.12"
iana-time-zone = "0.1.61"
lru = "0.13.0"
markdown = "0.3.0"
r2d2 = "0.8"
r2d2_sqlite = "0.26"
rand = "0.8"
regex = "1.11.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
rusqlite = { version = "0.33.0", features = ["serde_json", "bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
serde_with_macros = "3.12.0"
sha2 = "0.10"
tempfile = "3.13.0"
tera = "1.20.0"
tokio = { version = "1", features = ["full", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6.2", features = ["trace", "compression-full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-tree = "0.4.0"
url = "2.5.2"
walkdir = "2.5.0"

[dev-dependencies]
http-body-util = "0.1"
pretty_assertions = "1.4.1"
tower = { version = "0.5.2", features = ["util"] }

[build-dependencies]
built = { version = "0.7", features = ["cargo-lock", "dependency-tree", "git2", "chrono", "semver"] }

